--- a/tests/templates/kuttl/smoke/06-install-opa.yaml.j2
+++ b/tests/templates/kuttl/smoke/06-install-opa.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: opa.stackable.tech/v1alpha1
 kind: OpaCluster
 metadata:
-  name: test-opa
+  name: opa
 spec:
   version: {{ test_scenario['values']['opa'] }}
   servers:
