--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: test-trino-users-secret
+  name: trino-users
 type: kubernetes.io/opaque
 stringData:
   # admin:admin
@@ -15,25 +15,32 @@ stringData:
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
-  name: test-trino
+  name: trino
 spec:
   version: {{ test_scenario['values']['trino'] }}
-  hiveConfigMapName: test-hive-postgres
+  hiveConfigMapName: hive
   opa:
-    configMapName: test-opa
+    configMapName: opa
     package: trino
   s3:
     inline:
-      host: test-minio
+      host: minio
       port: 9000
       accessStyle: Path
       credentials:
-        secretClass: test-s3-credentials-secret-class
+        secretClass: s3-credentials
+{% if test_scenario['values']['s3-use-tls'] == 'true' %}
+      tls:
+        verification:
+          server:
+            caCert:
+              secretClass: minio-tls-certificates
+{% endif %}
   authentication:
     method:
       multiUser:
         userCredentialsSecret:
-          name: test-trino-users-secret
+          name: trino-users
   coordinators:
     roleGroups:
       default:
