--- a/tests/templates/kuttl/smoke/30-scale-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/30-scale-trino.yaml.j2
@@ -1,26 +1,46 @@
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: trino-users
+type: kubernetes.io/opaque
+stringData:
+  # admin:admin
+  admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
+  # alice:alice
+  alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
+  # bob:bob
+  bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
+---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
-  name: test-trino
+  name: trino
 spec:
   version: {{ test_scenario['values']['trino'] }}
-  hiveConfigMapName: test-hive-postgres
+  hiveConfigMapName: hive
   opa:
-    configMapName: test-opa
+    configMapName: opa
     package: trino
   s3:
     inline:
-      host: test-minio
+      host: minio
       port: 9000
       accessStyle: Path
       credentials:
-        secretClass: test-s3-credentials-secret-class
+        secretClass: s3-credentials
+{% if test_scenario['values']['s3-use-tls'] == 'true' %}
+      tls:
+        verification:
+          server:
+            caCert:
+              secretClass: minio-tls-certificates
+{% endif %}
   authentication:
     method:
       multiUser:
         userCredentialsSecret:
-          name: test-trino-users-secret
+          name: trino-users
   coordinators:
     roleGroups:
       default:
