--- a/tests/templates/kuttl/smoke/30-scale-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/30-scale-trino.yaml.j2
@@ -1,39 +1,8 @@
 ---
-apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster
-metadata:
-  name: test-trino
-spec:
-  version: {{ test_scenario['values']['trino'] }}
-  hiveConfigMapName: test-hive-postgres
-  opa:
-    configMapName: test-opa
-    package: trino
-  s3:
-    inline:
-      host: test-minio
-      port: 9000
-      accessStyle: Path
-      credentials:
-        secretClass: test-s3-credentials-secret-class
-  authentication:
-    method:
-      multiUser:
-        userCredentialsSecret:
-          name: test-trino-users-secret
-  coordinators:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
-  workers:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 2
-        config: {}
+apiVersion: kuttl.dev/v1beta1
+kind: TestStep
+commands:
+  - script: >-
+      kubectl --namespace $NAMESPACE
+      patch trinoclusters.trino.stackable.tech trino
+      --type=merge --patch '{"spec":{"workers": {"roleGroups": {"default": {"replicas": 2}}}}}'
