--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -12,6 +12,19 @@ stringData:
   # bob:bob
   bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
 ---
+apiVersion: secrets.stackable.tech/v1alpha1
+kind: SecretClass
+metadata:
+  name: simple-trino-client-tls
+spec:
+  backend:
+    autoTls:
+      ca:
+        secret:
+          name: secret-provisioner-simple-trino-client-tls-ca
+          namespace: default
+        autoGenerate: true
+---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
@@ -23,25 +36,29 @@ spec:
     configMapName: opa
     package: trino
   config:
-    s3:
-      inline:
-        host: minio
-        port: 9000
-        accessStyle: Path
-        credentials:
-          secretClass: s3-credentials
+    tls:
+      secretClass: simple-trino-client-tls
+    internalTls:
+      secretClass: tls
+  s3:
+    inline:
+      host: minio
+      port: 9000
+      accessStyle: Path
+      credentials:
+        secretClass: s3-credentials
 {% if test_scenario['values']['s3-use-tls'] == 'true' %}
-        tls:
-          verification:
-            server:
-              caCert:
-                secretClass: minio-tls-certificates
+      tls:
+        verification:
+          server:
+            caCert:
+              secretClass: minio-tls-certificates
 {% endif %}
-    authentication:
-      method:
-        multiUser:
-          userCredentialsSecret:
-            name: trino-users
+  authentication:
+    method:
+      multiUser:
+        userCredentialsSecret:
+          name: trino-users
   coordinators:
     roleGroups:
       default:
