tls tests working

--- a/tests/templates/kuttl/tls/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/tls/10-install-trino.yaml.j2
@@ -1,3 +1,4 @@
+{% if test_scenario['values']['use-authentication'] == 'true' %}
 ---
 apiVersion: v1
 kind: Secret
@@ -7,10 +8,8 @@ type: kubernetes.io/opaque
 stringData:
   # admin:admin
   admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
-  # alice:alice
-  alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
-  # bob:bob
-  bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
+{% endif %}
+{% if test_scenario['values']['use-tls'] == 'true' %}
 ---
 apiVersion: secrets.stackable.tech/v1alpha1
 kind: SecretClass
@@ -24,6 +23,22 @@ spec:
           name: secret-provisioner-trino-tls-ca
           namespace: default
         autoGenerate: true
+{% endif %}
+{% if test_scenario['values']['use-internal-tls'] == 'true' %}
+---
+apiVersion: secrets.stackable.tech/v1alpha1
+kind: SecretClass
+metadata:
+  name: trino-internal-tls
+spec:
+  backend:
+    autoTls:
+      ca:
+        secret:
+          name: secret-provisioner-trino-internal-tls-ca
+          namespace: default
+        autoGenerate: true
+{% endif %}
 ---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
@@ -31,32 +46,24 @@ metadata:
   name: trino
 spec:
   version: {{ test_scenario['values']['trino'] }}
-  hiveConfigMapName: hive
-  opa:
-    configMapName: opa
-    package: trino
+{% if test_scenario['values']['use-tls'] == 'true' or test_scenario['values']['use-internal-tls'] == 'true' %}
   config:
+{% endif %}
+{% if test_scenario['values']['use-tls'] == 'true' %}
     tls:
       secretClass: trino-tls
-  s3:
-    inline:
-      host: minio
-      port: 9000
-      accessStyle: Path
-      credentials:
-        secretClass: s3-credentials
-{% if test_scenario['values']['s3-use-tls'] == 'true' %}
-      tls:
-        verification:
-          server:
-            caCert:
-              secretClass: minio-tls-certificates
 {% endif %}
+{% if test_scenario['values']['use-internal-tls'] == 'true' %}
+    internalTls:
+      secretClass: trino-internal-tls
+{% endif %}
+{% if test_scenario['values']['use-authentication'] == 'true' %}
   authentication:
     method:
       multiUser:
         userCredentialsSecret:
           name: trino-users
+{% endif %}
   coordinators:
     roleGroups:
       default:
