--- a/tests/templates/kuttl/smoke/01-install-minio.yaml.j2
+++ b/tests/templates/kuttl/smoke/01-install-minio.yaml.j2
@@ -19,3 +19,21 @@ commands:
 {% endif %}
       --repo https://charts.min.io/ minio
     timeout: 600
+---
+apiVersion: s3.stackable.tech/v1alpha1
+kind: S3Connection
+metadata:
+  name: minio
+spec:
+  host: minio
+  port: 9000
+  accessStyle: Path
+  credentials:
+    secretClass: s3-credentials
+{% if test_scenario['values']['s3-use-tls'] == 'true' %}
+  tls:
+    verification:
+      server:
+        caCert:
+          secretClass: minio-tls-certificates
+{% endif %}
