--- a/tests/templates/kuttl/tls/21-install-requirements.yaml.j2
+++ b/tests/templates/kuttl/tls/21-install-requirements.yaml.j2
@@ -4,7 +4,8 @@ kind: TestStep
 commands:
   - script: kubectl cp -n $NAMESPACE ./check-tls.py  trino-test-helper-0:/tmp
   - script: kubectl cp -n $NAMESPACE ./test-config.yaml  trino-test-helper-0:/tmp
-  - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- pip install -q trino pyyaml
+  - script: kubectl cp -n $NAMESPACE ./requirements.txt  trino-test-helper-0:/tmp
+  - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- pip install -q -r /tmp/requirements.txt
 {% if test_scenario['values']['use-authentication'] == 'true' or test_scenario['values']['use-tls'] == 'true' %}
   - script: kubectl cp -n $NAMESPACE trino-coordinator-default-0:/stackable/mount_client_tls/ca.crt /tmp/ca.crt
   - script: kubectl cp -n $NAMESPACE /tmp/ca.crt trino-test-helper-0:/tmp/ca.crt
