--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -1,4 +1,31 @@
 ---
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCluster
+metadata:
+  name: trino
+spec:
+  version: {{ test_scenario['values']['trino'] }}
+  catalogLabelSelector:
+    trino: simple-trino
+  opa:
+    configMapName: opa
+    package: trino
+  authentication:
+    method:
+      multiUser:
+        userCredentialsSecret:
+          name: trino-users
+  coordinators:
+    roleGroups:
+      default:
+        replicas: 1
+        config: {}
+  workers:
+    roleGroups:
+      default:
+        replicas: 1
+        config: {}
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,65 +38,20 @@ stringData:
   alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
   # bob:bob
   bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
----
-apiVersion: secrets.stackable.tech/v1alpha1
-kind: SecretClass
-metadata:
-  name: trino-tls
-spec:
-  backend:
-    autoTls:
-      ca:
-        secret:
-          name: secret-provisioner-trino-tls-ca
-          namespace: default
-        autoGenerate: true
+
 ---
 apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster
+kind: TrinoCatalog
 metadata:
-  name: trino
+  name: hive
+  labels:
+    trino: trino
 spec:
-  version: {{ test_scenario['values']['trino'] }}
-  hiveConfigMapName: hive
-  opa:
-    configMapName: opa
-    package: trino
-  config:
-    tls:
-      secretClass: trino-tls
-  s3:
-    inline:
-      host: minio
-      port: 9000
-      accessStyle: Path
-      credentials:
-        secretClass: s3-credentials
-{% if test_scenario['values']['s3-use-tls'] == 'true' %}
-      tls:
-        verification:
-          server:
-            caCert:
-              secretClass: minio-tls-certificates
-{% endif %}
-  authentication:
-    method:
-      multiUser:
-        userCredentialsSecret:
-          name: trino-users
-  coordinators:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
-  workers:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
+  connector:
+    hive:
+      metastore:
+        configMap: hive
+      s3:
+        reference: minio
+      hdfs:
+        configMap: hdfs
