--- a/tests/templates/kuttl/smoke/05-install-hdfs.yaml.j2
+++ b/tests/templates/kuttl/smoke/05-install-hdfs.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   name: hdfs
 spec:
   version: {{ test_scenario['values']['hdfs'] }}
-  zookeeperConfigMapName: zookeeper-hdfs-znode
+  zookeeperConfigMapName: hdfs-znode
   dfsReplication: 1
   nameNodes:
     roleGroups:
@@ -23,7 +23,7 @@ spec:
 apiVersion: zookeeper.stackable.tech/v1alpha1
 kind: ZookeeperZnode
 metadata:
-  name:  zookeeper-hdfs-znode
+  name:  hdfs-znode
 spec:
   clusterRef:
     name: zookeeper
