--- a/tests/templates/kuttl/tls/21-assert.yaml.j2
+++ b/tests/templates/kuttl/tls/21-assert.yaml.j2
@@ -1,6 +1,7 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
+timeout: 300
 commands:
   - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- python /tmp/check-tls.py -n $NAMESPACE
 {% if test_scenario['values']['use-internal-tls'] == 'true' %}
