TrinoClusters now must specify a catalogLabelSelector

--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -6,7 +6,8 @@ metadata:
 spec:
   version: {{ test_scenario['values']['trino'] }}
   catalogLabelSelector:
-    trino: simple-trino
+    matchLabels:
+      trino: trino
   opa:
     configMapName: opa
     package: trino
