--- a/tests/templates/kuttl/resources/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/resources/10-install-trino.yaml.j2
@@ -5,6 +5,7 @@ metadata:
   name: trino
 spec:
   version: {{ test_scenario['values']['trino'] }}
+  catalogLabelSelector: {}
   coordinators:
     roleGroups:
       resources-default:
