added tests for no tls service

--- a/tests/templates/kuttl/tls/test-config.json.j2
+++ b/tests/templates/kuttl/tls/test-config.json.j2
@@ -1,5 +1,9 @@
 {
-    "useAuthentication": {{ test_scenario['values']['use-authentication'] }},
+{% if test_scenario['values']['use-authentication'] == 'true' and test_scenario['values']['use-tls'] == 'true' %}
+    "useAuthentication": true,
+{% else %}
+    "useAuthentication": false,
+{% endif %}
     "useTls": {{ test_scenario['values']['use-tls'] }},
     "useInternalTls": {{ test_scenario['values']['use-internal-tls'] }}
 }
