--- a/tests/templates/kuttl/tls/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/tls/10-install-trino.yaml.j2
@@ -47,18 +47,20 @@ metadata:
 spec:
   version: {{ test_scenario['values']['trino'] }}
   catalogLabelSelector: {}
-{% if test_scenario['values']['use-tls'] == 'true' or test_scenario['values']['use-internal-tls'] == 'true' %}
   config:
-{% endif %}
 {% if test_scenario['values']['use-tls'] == 'true' %}
     tls:
       secretClass: trino-tls
+{% else  %}
+    tls: null
 {% endif %}
 {% if test_scenario['values']['use-internal-tls'] == 'true' %}
     internalTls:
       secretClass: trino-internal-tls
+{% else  %}
+    internalTls: null
 {% endif %}
-{% if test_scenario['values']['use-authentication'] == 'true' %}
+{% if test_scenario['values']['use-authentication'] == 'true' and test_scenario['values']['use-tls'] == 'true' %}
   authentication:
     method:
       multiUser:
