update README variables

--- a/.readme/README.md.j2
+++ b/.readme/README.md.j2
@@ -1,5 +1,6 @@
 {%- set title="Stackable Operator for Trino" -%}
 {%- set operator_name="trino" -%}
+{%- set operator_docs_slug="trino" -%}
 {%- set related_reading_links=[] -%}
 
 {% include "partials/borrowed/header.md.j2" %}
