--- a/tests/templates/kuttl/resources/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/resources/10-install-trino.yaml.j2
@@ -4,7 +4,9 @@ kind: TrinoCluster
 metadata:
   name: trino
 spec:
-  version: {{ test_scenario['values']['trino'] }}
+  image:
+    productVersion: "{{ test_scenario['values']['trino'].split('-stackable')[0] }}"
+    stackableVersion: "{{ test_scenario['values']['trino'].split('-stackable')[1] }}"
   catalogLabelSelector: {}
   coordinators:
     roleGroups:
