--- a/tests/templates/kuttl/smoke/08-install-opa.yaml.j2
+++ b/tests/templates/kuttl/smoke/08-install-opa.yaml.j2
@@ -4,7 +4,9 @@ kind: OpaCluster
 metadata:
   name: opa
 spec:
-  version: {{ test_scenario['values']['opa'] }}
+  image:
+    productVersion: "{{ test_scenario['values']['opa'].split('-stackable')[0] }}"
+    stackableVersion: "{{ test_scenario['values']['opa'].split('-stackable')[1] }}"
   servers:
     roleGroups:
       default:
