--- a/tests/templates/kuttl/ldap/12-install-trino.yaml.j2
+++ b/tests/templates/kuttl/ldap/12-install-trino.yaml.j2
@@ -14,7 +14,9 @@ kind: TrinoCluster
 metadata:
   name: trino
 spec:
-  version: {{ test_scenario['values']['trino'] }}
+  image:
+    productVersion: "{{ test_scenario['values']['trino'].split('-stackable')[0] }}"
+    stackableVersion: "{{ test_scenario['values']['trino'].split('-stackable')[1] }}"
   catalogLabelSelector: {}
   authentication:
     method:
