--- a/tests/templates/kuttl/orphaned-resources/1-install-trino.yaml.j2
+++ b/tests/templates/kuttl/orphaned-resources/1-install-trino.yaml.j2
@@ -4,6 +4,9 @@ kind: TrinoCluster
 metadata:
   name: trino
 spec:
+  image:
+    productVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}"
+    stackableVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}"
   version: {{ test_scenario['values']['trino-latest'] }}
   catalogLabelSelector: {}
   coordinators:
