Successfully tested locally.

--- a/tests/templates/kuttl/smoke/07-install-hive.yaml.j2
+++ b/tests/templates/kuttl/smoke/07-install-hive.yaml.j2
@@ -24,14 +24,16 @@ kind: HiveCluster
 metadata:
   name: hive
 spec:
-  version: {{ test_scenario['values']['hive'] }}
+  image:
+    productVersion: "{{ test_scenario['values']['hive'].split('-stackable')[0] }}"
+    stackableVersion: "{{ test_scenario['values']['hive'].split('-stackable')[1] }}"
   metastore:
     roleGroups:
       default:
         replicas: 2
         config:
           database:
-            connString: jdbc:postgresql://hive-postgresql:5432/hive
+            connString: jdbc:postgresql://postgresql:5432/hive
             user: hive
             password: hive
             dbType: postgres
