Update postgresql chart version. (#359)
# Description

:green_circle: CI: https://ci.stackable.tech/view/02%20Operator%20Tests%20(custom)/job/trino-operator-it-custom/43/

*Please add a description here. This will become the commit message of the merge request later.*

--- a/tests/templates/kuttl/smoke/07-install-hive.yaml.j2
+++ b/tests/templates/kuttl/smoke/07-install-hive.yaml.j2
@@ -33,7 +33,7 @@ spec:
         replicas: 2
         config:
           database:
-            connString: jdbc:postgresql://hive-postgresql:5432/hive
+            connString: jdbc:postgresql://postgresql:5432/hive
             user: hive
             password: hive
             dbType: postgres
