--- a/tests/templates/kuttl/tls/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/tls/10-install-trino.yaml.j2
@@ -46,8 +46,8 @@ metadata:
   name: trino
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['trino'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['trino'].split('-stackable')[1] }}"
+    productVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}"
+    stackableVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}"
   catalogLabelSelector: {}
   config:
 {% if test_scenario['values']['use-tls'] == 'true' %}
