Changed bind secret name (this is what we want to fix)

--- a/tests/templates/kuttl/ldap/12-install-trino.yaml.j2
+++ b/tests/templates/kuttl/ldap/12-install-trino.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: trino-with-ldap-bind
+  name: trino-with-ldap-bind-secret
   labels:
     secrets.stackable.tech/class: trino-with-ldap-bind
 stringData:
