--- a/tests/templates/kuttl/smoke/08-install-hive.yaml.j2
+++ b/tests/templates/kuttl/smoke/08-install-hive.yaml.j2
@@ -37,7 +37,13 @@ spec:
       configMap: hdfs
     s3:
       reference: minio
+{% if lookup('env', 'VECTOR_AGGREGATOR') %}
+    vectorAggregatorConfigMapName: vector-aggregator-discovery
+{% endif %}
   metastore:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 2
