--- a/tests/templates/kuttl/orphaned-resources/1-install-trino.yaml.j2
+++ b/tests/templates/kuttl/orphaned-resources/1-install-trino.yaml.j2
@@ -8,13 +8,22 @@ spec:
     productVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}"
     stackableVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}"
   catalogLabelSelector: {}
+{% if lookup('env', 'VECTOR_AGGREGATOR') %}
+  vectorAggregatorConfigMapName: vector-aggregator-discovery
+{% endif %}
   coordinators:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 1
       remove:
         replicas: 1
   workers:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 1
