--- a/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
+++ b/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
@@ -7,17 +7,29 @@ spec:
   image:
     productVersion: "{{ test_scenario['values']['hdfs'].split('-stackable')[0] }}"
     stackableVersion: "{{ test_scenario['values']['hdfs'].split('-stackable')[1] }}"
+{% if lookup('env', 'VECTOR_AGGREGATOR') %}
+  vectorAggregatorConfigMapName: vector-aggregator-discovery
+{% endif %}
   zookeeperConfigMapName: hdfs-znode
   dfsReplication: 1
   nameNodes:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 2
   dataNodes:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 1
   journalNodes:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 1
