--- a/tests/templates/kuttl/tls/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/tls/10-install-trino.yaml.j2
@@ -49,6 +49,9 @@ spec:
     productVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}"
     stackableVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}"
   catalogLabelSelector: {}
+{% if lookup('env', 'VECTOR_AGGREGATOR') %}
+  vectorAggregatorConfigMapName: vector-aggregator-discovery
+{% endif %}
   config:
 {% if test_scenario['values']['use-tls'] == 'true' %}
     tls:
@@ -70,12 +73,16 @@ spec:
           name: trino-users
 {% endif %}
   coordinators:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 1
-        config: {}
   workers:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default:
         replicas: 1
-        config: {}
