utilize root logger

--- a/tests/templates/kuttl/logging/02-install-trino.yaml.j2
+++ b/tests/templates/kuttl/logging/02-install-trino.yaml.j2
@@ -67,6 +67,8 @@ spec:
                 loggers:
                   io.trino:
                     level: INFO
+                  ROOT:
+                    level: ERROR
               vector:
                 console:
                   level: INFO
