--- a/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
+++ b/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
@@ -7,11 +7,12 @@ spec:
   image:
     productVersion: "{{ test_scenario['values']['hdfs'].split('-stackable')[0] }}"
     stackableVersion: "{{ test_scenario['values']['hdfs'].split('-stackable')[1] }}"
+  clusterConfig:
+    dfsReplication: 1
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
-  vectorAggregatorConfigMapName: vector-aggregator-discovery
+    vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
-  zookeeperConfigMapName: hdfs-znode
-  dfsReplication: 1
+    zookeeperConfigMapName: hdfs-znode
   nameNodes:
     config:
       logging:
