Fix/docs test nightly to dev (#397)
# Description

test https://ci.stackable.tech/view/05%20Documentation%20Tests/job/trino-operator-documentation-test/3/

--- a/docs/modules/trino/examples/getting_started/code/getting_started.sh.j2
+++ b/docs/modules/trino/examples/getting_started/code/getting_started.sh.j2
@@ -25,6 +25,9 @@ echo "Adding '{{ helm.repo_name }}' Helm Chart repository"
 # tag::helm-add-repo[]
 helm repo add {{ helm.repo_name }} {{ helm.repo_url }}
 # end::helm-add-repo[]
+echo "Updating Helm repo"
+helm repo update
+
 echo "Installing Operators with Helm"
 # tag::helm-install-operators[]
 helm install --wait commons-operator {{ helm.repo_name }}/commons-operator --version {{ versions.commons }}
@@ -52,12 +55,12 @@ echo "Installing Trino cluster from trino.yaml"
 kubectl apply -f trino.yaml
 # end::install-trino[]
 
-sleep 5
+sleep 15
 
 echo "Awaiting Trino rollout finish"
 # tag::watch-trino-rollout[]
-kubectl rollout status --watch statefulset/simple-trino-coordinator-default
-kubectl rollout status --watch statefulset/simple-trino-worker-default
+kubectl rollout status --watch --timeout=5m statefulset/simple-trino-coordinator-default
+kubectl rollout status --watch --timeout=5m statefulset/simple-trino-worker-default
 # end::watch-trino-rollout[]
 
 sleep 5
