--- a/tests/templates/kuttl/ldap/12-install-trino.yaml.j2
+++ b/tests/templates/kuttl/ldap/12-install-trino.yaml.j2
@@ -17,18 +17,19 @@ spec:
   image:
     productVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}"
     stackableVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}"
-  catalogLabelSelector: {}
+  clusterConfig:
+    catalogLabelSelector: {}
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
-  vectorAggregatorConfigMapName: vector-aggregator-discovery
+    vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
-  authentication:
-    method:
+    authentication:
+      method:
 {% if test_scenario['values']['ldap-use-tls'] == 'false' %}
-      ldap:
-        authenticationClass: ldap-without-tls
+        ldap:
+          authenticationClass: ldap-without-tls
 {% else  %}
-      ldap:
-        authenticationClass: ldap-with-tls
+        ldap:
+          authenticationClass: ldap-with-tls
 {% endif %}
   coordinators:
     config:
