--- a/tests/templates/kuttl/smoke/02-install-minio.yaml.j2
+++ b/tests/templates/kuttl/smoke/02-install-minio.yaml.j2
@@ -1,3 +1,4 @@
+{% if test_scenario['values']['openshift'] == 'false' %}
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
@@ -5,35 +6,31 @@ commands:
   - script: >-
       helm install minio
       --namespace $NAMESPACE
-      --version 4.0.2
+      --version 5.0.5
       --set mode=standalone
       --set replicas=1
-      --set persistence.enabled=false
+      --set persistence.enabled=true
       --set buckets[0].name=trino,buckets[0].policy=none
       --set users[0].accessKey=trino,users[0].secretKey=trinotrino,users[0].policy=readwrite
       --set resources.requests.memory=1Gi
       --set service.type=NodePort,service.nodePort=null
       --set consoleService.type=NodePort,consoleService.nodePort=null
+      --set securityContext.enabled=true
 {% if test_scenario['values']['s3-use-tls'] == 'true' %}
       --set tls.enabled=true,tls.certSecret=minio-tls-certificates,tls.publicCrt=tls.crt,tls.privateKey=tls.key
 {% endif %}
       --repo https://charts.min.io/ minio
     timeout: 600
+{% else %}
 ---
-apiVersion: s3.stackable.tech/v1alpha1
-kind: S3Connection
-metadata:
-  name: minio
-spec:
-  host: minio
-  port: 9000
-  accessStyle: Path
-  credentials:
-    secretClass: s3-credentials
-{% if test_scenario['values']['s3-use-tls'] == 'true' %}
-  tls:
-    verification:
-      server:
-        caCert:
-          secretClass: minio-tls-certificates
+apiVersion: kuttl.dev/v1beta1
+kind: TestStep
+commands:
+  - script: >-
+      helm install minio
+      --namespace $NAMESPACE
+      --version 11.9.2
+      -f helm-bitnami-minio-values.yaml
+      --repo https://charts.bitnami.com/bitnami minio
+    timeout: 240
 {% endif %}
