--- a/tests/templates/kuttl/smoke/04-prepare-bucket.yaml.j2
+++ b/tests/templates/kuttl/smoke/04-prepare-bucket.yaml.j2
@@ -2,13 +2,19 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
-  - script: >-
-      kubectl exec -n $NAMESPACE minio-mc-0 --
-{% if test_scenario['values']['s3-use-tls'] == 'true' %}
-      sh -c 'mc --insecure alias set minio https://minio:9000/ trino trinotrino'
+  # give minio enough time to start
+  - command: sleep 5
+{% if test_scenario['values']['openshift'] == 'true' %}
+  - command: kubectl exec -n $NAMESPACE minio-client -- sh -c 'mc --insecure alias set minio http://minio:9000 $$MINIO_SERVER_ACCESS_KEY $$MINIO_SERVER_SECRET_KEY'
+  - command: kubectl exec -n $NAMESPACE minio-client -- mc mb minio/trino
+  - command: kubectl exec -n $NAMESPACE minio-client -- mc admin user add minio trino trinotrino
+  - command: kubectl exec -n $NAMESPACE minio-client -- mc admin policy set minio readwrite user=trino
 {% else %}
-      sh -c 'mc --insecure alias set minio http://minio:9000/ trino trinotrino'
+{% if test_scenario['values']['s3-use-tls'] == 'true' %}
+  - command: kubectl exec -n $NAMESPACE minio-client -- sh -c 'mc --insecure alias set minio https://minio:9000 trino trinotrino'
+{% else %}
+  - command: kubectl exec -n $NAMESPACE minio-client -- sh -c 'mc --insecure alias set minio http://minio:9000 trino trinotrino'
 {% endif %}
-  - script: kubectl cp -n $NAMESPACE yellow_tripdata_2021-07.csv  minio-mc-0:/tmp || true
-# We don't validate the custom MinIO cert here
-  - script: kubectl exec -n $NAMESPACE minio-mc-0 -- mc --insecure cp /tmp/yellow_tripdata_2021-07.csv minio/trino
+{% endif %}
+  - command: kubectl cp -n $NAMESPACE yellow_tripdata_2021-07.csv minio-client:/tmp
+  - command: kubectl exec -n $NAMESPACE minio-client -- mc --insecure cp /tmp/yellow_tripdata_2021-07.csv minio/trino
